--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -11,4 +11,4 @@ jobs:
         - name: Install Cocoapods dependencies
           run: bundle exec pod install --project-directory=Example
         - name: iOS
-          run: xcodebuild test -workspace Example/PerspectiveTransform.xcworkspace -scheme Example -destination "platform=iOS Simulator,name=iPhone SE" | tee .ci/results/xcodebuild-ios.log
+          run: xcodebuild test -workspace Example/PerspectiveTransform.xcworkspace -scheme Example -destination "platform=iOS Simulator,name=iPhone SE"
